# recoment_system_v3

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml
.dvc/: config
.github/workflows/: main.yml
data/: user_history.csv.dvc
models/: delivery_estimator.onnx  recommendation.onnx  recommendation_meta.json
scripts/: COMMANDS.txt  README.md  __init__.py  add_november_data.bat  clean_and_reset.bat  demo.bat  generate_delivery_data.bat  generate_delivery_data.py  generate_user_history.py  init_data.py  lab4_docker_up.bat  lab4_e2e_check.py  lab4_ensure_data.bat  lab4_prepare_env.bat  lab4_quickstart.bat  lab4_run_tests.bat  lab4_train_recommendation.bat  lab4_verify.ps1  lab4_verify.py  prepare_data.bat  prepare_delivery_data_dvc.bat  quality_gate.py  run_api.bat  setup.bat  smoke_test_api.ps1  switch_to_november.bat  switch_to_october.bat  train_delivery_model.py  train_model.bat  train_model.py  train_recommendation_model.bat  train_recommendation_model.py
src/application/: recommendation_service.py
src/domain/: interfaces.py
src/infrastructure/: collaborative.py
src/presentation/: cli.py
src/recommender_system/: env.py
src/recommender_system/application/: data_sync_service.py  recommendation_model_sync.py  recommendation_service.py  (+2 more)
tests/: conftest.py  test_data_sync_service.py  test_delivery_api.py  test_delivery_onnx_inference.py  test_fastapi_endpoints.py  test_lab4_integration.py  test_lab4_recommendations_api.py  test_lab4_worker.py  test_model_data_sync_service.py  test_recommendation_service.py  test_s3_storage.py  test_train_model_upload_minio.py  test_train_recommendation_model.py
(+13 files in other folders)
