[project]
name = "recommender-system"
version = "0.1.0"
description = "Recommender System - Clean Architecture (Lab 1)"
authors = [
    {name = "lolovlad",email = "lolovlad33@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "dvc[s3] (>=3.66.1,<4.0.0)",
    "boto3 (>=1.41.0,<1.41.6)"
]

[tool.poetry]
packages = [{include = "recommender_system", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
